--- a/portfolio.html
+++ b/portfolio.html
@@ -1,38 +1,160 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Bootstrap Portfolio</title>
-  </head>
+  <!-- The meta tag for responsiveness is commented out, to minimize use of media queries -->
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
-  <body>
-    <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li> -->
-      </ul>
+  <!-- Bootstrap core CSS -->
+  <link href="assets\css\bootstrap.min.css" rel="stylesheet">
 
-    <!-- Define in this order: containers, then rows, then columns -->
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
-  </body>
+  <!-- Custom styles -->
+  <link href="assets\css\style.css" rel="stylesheet">
+
+  <title>Bootstrap Portfolio</title>
+</head>
+
+<body>
+  <!-- Static navbar -->
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand">Chris Zoghby</a>
+      </div>
+
+      <div id="navbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="index.html">About</a>
+          </li>
+          <li class="active">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="page-header">
+      <h1>Portfolio</h1>
+    </div>
+    <!-- First Row -->
+    <div class="row">
+      <!-- 8 Column Span in First Row -->
+      <div class="col-xs-8">
+        <!-- Subrow Within the 8 columns, these will display the first two portfolio links, with offesets in between -->
+        <div class="row">
+          <!-- 6 Column Span in Sub Row For the first Picture -->
+          <div class="col-xs-6">
+            <div class="thumbnail">
+              <img src="assets/images/placeholder1.jpg" alt="placeholder_image1">
+              <div class="wrapper">
+                <div class="caption post-content">
+                  <h3>Robots!</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 6 column span for the second -->
+          <div class="col-xs-6">
+            <div class="thumbnail">
+              <img src="assets/images/placeholder2.jpg" alt="placeholder_image2">
+              <div class="wrapper">
+                <div class="caption post-content">
+                  <h3>Robots!</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end subrow -->
+        <!-- Starting 2nd subrow -->
+        <div class="row top-buffer">
+          <!-- Each set of 6 columns will contain a portfolio image -->
+          <div class="col-xs-6">
+            <div class="thumbnail">
+              <img src="assets/images/placeholder3.jpg" alt="placeholder_image3">
+              <div class="wrapper">
+                <div class="caption post-content">
+                  <h3>Robots!</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-6">
+            <div class="thumbnail">
+              <img src="assets/images/placeholder5.jpg" alt="placeholder_image5">
+              <div class="wrapper">
+                <div class="caption post-content">
+                  <h3>Robots!</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>  
+        <!-- starting 3rd subrow -->
+        <div class="row top-buffer">
+          <div class="col-xs-6">
+            <div class="thumbnail">
+              <img src="assets/images/placeholder5.jpg" alt="placeholder_image5">
+              <div class="wrapper">
+                <div class="caption post-content">
+                  <h3>Robots!</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 4 Column Span in First Row For contact sidebar-->
+      <div class="col-xs-3 col-xs-offset-1">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Contact Me</h3>
+          </div>
+          <div class="panel-body">
+            <!-- Creating a new sub-row inside the body with which to display the links -->
+            <div class="row">
+              <div class="col-xs-4">
+                <a href="https://github.com/CGZoghby">
+                  <img class="img-responsive" src="assets/images/if_github_square_black_107109.png" alt="githubLink">
+                </a>
+              </div>
+              <div class="col-xs-4">
+                <a href="https://www.linkedin.com/in/christopherzoghby/">
+                  <img class="img-responsive" src="assets/images/if_linkedin_square_color_107091.png" alt="linkedin">
+                </a>
+              </div>
+              <div class="col-xs-4">
+                <a href="https://stackoverflow.com/users/9185333/christopher-zoghby?tab=profile">
+                  <img class="img-responsive" id="stack_jerk_icon" src="assets/images/if_overflow_334695.png" alt="stackoverflow" height="36"
+                    width="36">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End First Row -->
+  </div>
+
+  <footer class="footer">
+    <div class="container text-center">
+      <p class="text-muted">(c) Christopher Gregory Zoghby 2018</p>
+    </div>
+  </footer>
+</body>
+
 </html>
