Final Desktop Edits

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- The meta tag for responsiveness is commented out, to minimize use of media queries -->
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <!-- Bootstrap core CSS -->
   <link href="assets\css\bootstrap.min.css" rel="stylesheet">
@@ -23,14 +23,14 @@
 
 <body>
   <!-- Fixed navbar -->
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-static-top">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand">Chris Zoghby</a>
       </div>
 
       <div id="navbar">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right collapsed navbar-collapse">
           <li class="active">
             <a href="index.html">About</a>
           </li>
@@ -59,7 +59,7 @@
           <!-- 3 Column Span in Sub Row For the Picture -->
           <div class="col-xs-3">
             <!-- Personal Photo Add -->
-            <img id="bio_image" class="img-responsive" src="assets/images/Personal_Photo.png" alt="Personal_Picture">
+            <img id="bio_image" class="img-responsive" src="assets/images/Personal_Photo.PNG" alt="Personal_Picture">
           </div>
           <!-- 9 column span for the paragraph content -->
           <div class="col-xs-9">
@@ -101,7 +101,7 @@
               </div>
               <div class="col-xs-4">
                 <a href="https://stackoverflow.com/users/9185333/christopher-zoghby?tab=profile">
-                  <img class="img-responsive" id="stack_jerk_icon" src="assets/images/if_overflow_334695.png" alt="stackoverflow" height="36" width="36">
+                  <img class="img-responsive" id="stack_jerk_icon" src="assets/images/if_overflow_334695.png" alt="stackoverflow" height="51" width="51">
                 </a>
               </div>
             </div>
@@ -118,4 +118,4 @@
   </footer>
 </body>
 
-</html> -->
+</html>
