--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 
 <body>
   <!-- Static navbar -->
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-static-top">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand">Chris Zoghby</a>
@@ -138,8 +138,8 @@
               </div>
               <div class="col-xs-4">
                 <a href="https://stackoverflow.com/users/9185333/christopher-zoghby?tab=profile">
-                  <img class="img-responsive" id="stack_jerk_icon" src="assets/images/if_overflow_334695.png" alt="stackoverflow" height="36"
-                    width="36">
+                  <img class="img-responsive" id="stack_jerk_icon" src="assets/images/if_overflow_334695.png" alt="stackoverflow" height="53"
+                    width="53">
                 </a>
               </div>
             </div>
