--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
 <body>
   <!-- Static navbar -->
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-static-top">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand">Chris Zoghby</a>
